Fix menu active items, fix intro text visibility

--- a/src/sass/layouts/_intro.scss
+++ b/src/sass/layouts/_intro.scss
@@ -15,6 +15,8 @@
   }
 
   &-img {
+    opacity: 0.75;
+
     & img {
       height: auto;
       max-width: rem(1000);
